Bug 165812 - std::expected: fix rvalue forwarding issues
Summary: std::expected: fix rvalue forwarding issues
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Web Template Framework (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: JF Bastien
URL:
Keywords:
Depends on:
Blocks: 163919
  Show dependency treegraph
 
Reported: 2016-12-13 11:50 PST by JF Bastien
Modified: 2016-12-13 14:28 PST (History)
6 users (show)

See Also:


Attachments
patch (3.57 KB, patch)
2016-12-13 11:52 PST, JF Bastien
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description JF Bastien 2016-12-13 11:50:48 PST
I ran into a few forwarding issues while using std::expected in #163919.
Comment 1 JF Bastien 2016-12-13 11:52:43 PST
Created attachment 297031 [details]
patch
Comment 2 Mark Lam 2016-12-13 11:59:52 PST
Comment on attachment 297031 [details]
patch

LGTM.
Comment 3 WebKit Commit Bot 2016-12-13 14:28:23 PST
Comment on attachment 297031 [details]
patch

Clearing flags on attachment: 297031

Committed r209778: <http://trac.webkit.org/changeset/209778>
Comment 4 WebKit Commit Bot 2016-12-13 14:28:28 PST
All reviewed patches have been landed.  Closing bug.