std::expected: fix rvalue forwarding issues https://bugs.webkit.org/show_bug.cgi?id=165812

Reviewed by Mark Lam.

* wtf/Expected.h:
(WTF::UnexpectedType::UnexpectedType):
(WTF::ExpectedDetail::Base::Base):
(WTF::Expected::Expected):


Canonical link: https://commits.webkit.org/183424@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209778 268f45cc-cd09-0410-ab3c-d52691b4dbfc